# zig-libp2p

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  build.zig  build.zig.zon  release-please-config.json
.github/workflows/: ci.yml  interop-quic-cross.yml  interop-quic-self.yml  interop.yml  release-please.yml  unified-testing-interop.yml
bench/: bench.zig
docs/: ARCHITECTURE.md  AUTONAT.md  KAD_DHT.md  MDNS.md  RENDEZVOUS.md  REPO_LAYOUT.md  REPO_LAYOUT.md.local-bak  SECURITY.md  async-swarm.md  zeam-parity.md
examples/: README.md  addr_list_csv.zig  autonat_membuf.zig  dcutr_membuf.zig  gen_libp2p_cert.zig  gossipsub_mesh.zig  host_quic_node.zig  interop_quic_node.zig  kad_dht_membuf.zig  multistream_negotiate.zig  ping_membuf.zig  quic_ping_loopback.zig  relay_membuf.zig  rendezvous_membuf.zig  req_resp_tcp_status.zig  swarm_tick.zig  varint.zig
harness/: README.md
harness/quic/: Dockerfile  README.md  relay_test.sh  run_matrix.sh  self_test.sh
harness/quic/impls/rust-libp2p/: Cargo.toml  Dockerfile
interop/: Dockerfile  README.md  local_repro.sh  main.zig  mux_link.zig  redis_client.zig  run_smoke.sh  run_unified_testing.sh  smoke-compose.yaml
interop_quic/: Dockerfile  README.md  gen_certs.sh  relay_test.sh  run_endpoint.sh  run_matrix.sh  self_test.sh
interop_quic/impls/rust-libp2p/: Cargo.toml
interop_quic/impls/rust-libp2p/src/: main.rs
scripts/: apply-phases-3-5.py  apply-repo-layout.py
src/: README.md  addr_list.zig  connection_manager.zig  errors.zig  host.zig  identify.zig  identify_advertisement.zig  identity.zig  keypair.zig  layer_events.zig  metrics.zig  multistream.zig  peer_events.zig  peer_protocols.zig  ping.zig  ping_wire_quic.zig  protocol.zig  root.zig  static_lib_entry.zig  swarm.zig  varint.zig  wall_time.zig  wire_boundaries.zig  zeam_bridge.zig  zeam_ffi.zig  zeam_glue_root.zig
(+182 files in other folders)
