[package]
name = "interop-quic-node-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", default-features = false, features = [
    "ed25519",
    "gossipsub",
    "macros",
    "ping",
    "quic",
    "request-response",
    "tokio",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "io-util", "sync"] }
futures = "0.3"
hex = "0.4"
rand = "0.8"
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
