[package]
name = "interop-quic-node-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", default-features = false, features = [
    "ecdsa",      # gen-libp2p-cert mints ECDSA-P-256 host identities by default;
                  # without this feature libp2p-identity's try_decode_protobuf
                  # returns "cargo feature `ecdsa` is not enabled" and the
                  # libp2p-tls verifier maps that to UnknownIssuer, killing
                  # every cross-impl handshake against a zig libp2p server.
    "secp256k1",  # zeam-network / ethlibp2p_v2 uses secp256k1 host identities
                  # (matches the lean ecosystem ENR secp256k1 convention);
                  # same UnknownIssuer trap without this feature.
    "ed25519",
    "gossipsub",
    "macros",
    "ping",
    "quic",
    "request-response",
    "tokio",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "io-util", "sync"] }
futures = "0.3"
hex = "0.4"
rand = "0.8"
async-trait = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
